--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<title>Hello World App</title>
-		<script id="sap-ui-bootstrap"
-		        src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+		<script src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+		        id="sap-ui-bootstrap"
 		        data-sap-ui-theme="sap_belize"
 		        data-sap-ui-libs="sap.m">
 		</script>
@@ -44,5 +44,7 @@
 			app.placeAt("content");
 		</script>
 	</head>
-	<body class="sapUiBody" id="content"></body>
+	<body class="sapUiBody" id="content">
+		Hello this is a text
+	</body>
 </html>
